webapp/src/pages/Users/Users.css
.users {
  margin: 0;
  padding: 0;
  min-height: 100vh;
  background-color: var(--color-background);
  color: var(--color-light);
}

.users-wrapper {
  width: 80%;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  gap: 1rem;
}

.rows-list {
  margin-top: 150px;
}

.fixed-frame {
  display: flex;
  position: fixed;
  width: 80%;
  z-index: 10;
}

@media all and (min-width: 768px) {
  .fixed-frame,
  .fixed-frame > .avatar-search {
    align-items: center;
    display: flex;
    flex-direction: row;
    top: 0;
    padding-bottom: 10px;
    z-index:10;
    background: var(--color-background);
  }
  .fixed-frame > .navigation-bar {
    margin-left: 30px;
    width: 40%;
    top: 0;
    z-index:10;
    padding-bottom: 10px;
    background: var(--color-background);
  }
}

@media not all and (min-width: 768px) {
  .fixed-frame,
  .fixed-frame > .avatar-search {
    display: flex;
    flex-direction: column;
    top: 0;
    z-index:10;
    padding-bottom: 10px;
    background: var(--color-background);
  }
  .fixed-frame > .navigation-bar {
    position: fixed;
    bottom: 0;
    width: 80%;
    z-index:10;
    padding-top: 10px;
    background: var(--color-background);
  }
}

.scrollable {
  height: 100%;
  width: 100%;
  z-index:1;
}

